--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "passport": "^0.4.1",
+    "passport-facebook": "^3.0.0"
   },
   "devDependencies": {
     "concurrently": "^5.3.0"
